Thu Nov 27 18:07:15 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ORB_Core.cpp (root_poa): 

	  Added a double-checked-locking in the implementation of
	  root_poa. Thanks to Sebastien Lalonde for pointing this
	  out. Looks like the intial authors thought that users wouldn't
	  call resolve_initial_references () from multiple threads. 

Thu Nov 27 17:41:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/ImplRepo_Service/implrepo.dsp: 
	* orbsvcs/ImplRepo_Service/tao_imr.dsp: 
	* orbsvcs/tests/Notify/Basic/AdminProperties.dsp: 
	* orbsvcs/tests/Notify/Basic/Filter.dsp: 
	* orbsvcs/tests/Notify/Basic/MultiTypes.dsp: 
	* orbsvcs/tests/Notify/Basic/Updates.dsp: 
	* orbsvcs/tests/Notify/Blocking/Structured_Consumer.dsp: 
	* orbsvcs/tests/Notify/Blocking/Structured_Supplier.dsp: 
	* orbsvcs/tests/Notify/Discarding/Sequence_Consumer.dsp: 
	* orbsvcs/tests/Notify/Discarding/Sequence_Supplier.dsp: 
	* orbsvcs/tests/Notify/Discarding/Structured_Consumer.dsp: 
	* orbsvcs/tests/Notify/Discarding/Structured_Supplier.dsp: 
	* orbsvcs/tests/Notify/Driver/Driver.dsp: 
	* orbsvcs/tests/Notify/MT_Dispatching/Structured_Consumer.dsp: 
	* orbsvcs/tests/Notify/MT_Dispatching/Structured_Supplier.dsp: 
	* orbsvcs/tests/Notify/Ordering/Sequence_Consumer.dsp: 
	* orbsvcs/tests/Notify/Ordering/Sequence_Supplier.dsp: 
	* orbsvcs/tests/Notify/Ordering/Structured_Consumer.dsp: 
	* orbsvcs/tests/Notify/Ordering/Structured_Supplier.dsp: 
	* orbsvcs/tests/Notify/RT_lib/TAO_RT_NotifyTests.dsp: 
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Sequence_Consumer.dsp: 
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Sequence_Supplier.dsp: 
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Sequence_Consumer.dsp: 
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Sequence_Supplier.dsp: 
	* orbsvcs/tests/Notify/Structured_Filter/Structured_Filter_Consumer.dsp: 
	* orbsvcs/tests/Notify/Structured_Filter/Structured_Filter_Supplier.dsp: 